--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <body>
 
     <div class="container">
-        <h1>Prilchen LABS Web Installer</h1>
-        <p>Für das Projekt Quiz Buzzer, Schließe deinen Lolin32 via USB an und klicke auf den Button, um die Buzzer Firmware zu installieren.</p>
+        <h1>  Prilchen LABS   Web Installer</h1>
+        <p>Für das Projekt Quiz Buzzer von Prilchen.de! Schließe deinen Lolin32 via USB an und klicke auf den Button, um die Buzzer Firmware zu installieren. Achtung alles auf dem Lolin32 wird vorhergelöscht!</p>
         
         <esp-web-install-button manifest="manifest.json">
             <button slot="activate">Verbinden & Installieren</button>
