--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 <body>
 
     <div class="container">
-        <h1>  Prilchen LABS   Web Installer</h1>
-        <p>Für das Projekt Quiz Buzzer von Prilchen.de! Schließe deinen Lolin32 via USB an und klicke auf den Button, um die Buzzer Firmware zu installieren. Achtung alles auf dem Lolin32 wird vorhergelöscht!</p>
+        <h1>Prilchen LABS</h1>
+        <h1>Web Installer</h1>
+        <p>Für das Projekt Quiz Buzzer von Prilchen.de!</p>
+        <p>Schließe deinen Lolin32 via USB an und klicke auf den Button, um die Buzzer Firmware zu installieren.</p>
+        <p>⚠ Achtung, alles auf dem Lolin32 wird vorher gelöscht!</p>
         
         <esp-web-install-button manifest="manifest.json">
             <button slot="activate">Verbinden & Installieren</button>
@@ -65,3 +68,4 @@
 
 </body>
 </html>
+
